--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@
   font-weight: 500;
 }
 
+.btn-reset-user,
 .btn-switch-user {
   padding: 0.25rem 0.5rem;
   font-size: 0.8rem;
@@ -95,6 +96,11 @@
   border-radius: 4px;
 }
 
+.btn-reset-user {
+  margin-right: 0.5rem;
+}
+
+.btn-reset-user:hover,
 .btn-switch-user:hover {
   background: rgba(255, 255, 255, 0.2);
   color: #fff;
